# Tetris-openGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tetris.aps  Tetris.rc  Tetris.vcxproj  Tetris.vcxproj.filters  dependencies.txt  log_2022_08_24.txt  log_2022_09_05.txt  log_2022_09_06.txt  resource.h  settings.json  settings1.json
res/shaders/: fragment.glsl  sprite.fragment  sprite.vertex  texture.fragment  texture.vertex  vertex.glsl  vertex.shader
src/: IBO.cpp  IBO.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp  application.cpp  application.hpp  cell.cpp  cell.hpp  common.hpp  error.cpp  error.hpp  game.cpp  game.hpp  glad.c  logging.hpp  main.cpp  renderer.cpp  renderer.hpp  settings.cpp  settings.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
src/engine/: error.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
src/game/: application.cpp  application.hpp  game.cpp  game.hpp  gameRender.cpp  main.cpp  memoryReplay.cpp  prcoessInput.cpp  settings.cpp  settings.hpp
